--- a/WebApp/Views/Shared/_PatientLayout.cshtml
+++ b/WebApp/Views/Shared/_PatientLayout.cshtml
@@ -105,13 +105,13 @@
                         <div class="menu_section">
                             <ul class="nav side-menu" style="margin-top: 10px;">
                                 <li class="scheduler">
-                                    <a href="#"><img src="~/Content/images/appointments.png" alt=""> &nbsp <span class="menu-txt"> Appointment</span></a>
-                                    <ul class="nav child_menu">
+                                    <a href="@Url.Action("Index","Appointment")"><img src="~/Content/images/appointments.png" alt=""> &nbsp <span class="menu-txt"> Appointment</span></a>
+                                    @*<ul class="nav child_menu">
                                         <li><a href="appointments.html">Rescheduled Appointments</a></li>
                                         <li><a href="appointments.html">Pending Appointments</a></li>
                                         <li><a href="appointments.html">Cancelled Appointments</a></li>
                                         <li><a href="appointments.html">Completed Appointments</a></li>
-                                    </ul>
+                                    </ul>*@
                                 </li>
                                 <li class="doctor">
                                     <a href="@Url.Action("SeeDoctor", "SeeDoctor")"><img src="~/Content/images/icon_doc_search.png" alt="">  &nbsp <span class="menu-txt">See a doctor</span> </a>
@@ -564,13 +564,14 @@
         });
     </script>
     <script>
-        $(document).ajaxSuccess(function (evt, request, settings) {
-            console.log(request.responseText);
-            if (response.isRedirect) {
-                window.location.href = response.redirectUrl;
+              $(document).ajaxSuccess(function (evt, request, settings) {
+            console.log(request.response);
+            if (request.response != null) {
+                if (request.response.redirectUrl != null)
+                    window.location.href = request.response.redirectUrl;
             }
         });
-        </script>
+    </script>
 
 
     @RenderSection("scripts", required: false)
