appointment summary docto info resolved

--- a/WebApp/Views/Shared/_PatientLayout.cshtml
+++ b/WebApp/Views/Shared/_PatientLayout.cshtml
@@ -570,9 +570,9 @@
     <script>
         $(document).ajaxSuccess(function (evt, request, settings) {
             console.log(request.responseText);
-            if (response.isRedirect) {
-                window.location.href = response.redirectUrl;
-            }
+            //if (response.isRedirect) {
+            //    window.location.href = response.redirectUrl;
+            //}
         });
         </script>
 
