--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -119,13 +119,13 @@
                         <div class="menu_section">
                             <ul class="nav side-menu" style="margin-top: 10px;">
                                 <li class="scheduler">
-                                    <a href="#"><img src="~/Content/images/icon_scheduler.png" alt=""> &nbsp <span class="menu-txt"> Appointment</span></a>
-                                    <ul class="nav child_menu">
+                                    <a href="@Url.Action("Index","DoctorAppointment")"><img src="~/Content/images/icon_scheduler.png" alt=""> &nbsp <span class="menu-txt"> Appointment</span></a>
+                                    @*<ul class="nav child_menu">
                                         <li><a href="appointments.html">Rescheduled Appointments</a></li>
                                         <li><a href="appointments.html">Pending Appointments</a></li>
                                         <li><a href="appointments.html">Cancelled Appointments</a></li>
                                         <li><a href="appointments.html">Completed Appointments</a></li>
-                                    </ul>
+                                    </ul>*@
                                 </li>
                                 <li class="doctor">
                                     <a href="@Url.Action("DoctorTimings", "Doctor")"><img src="~/Content/images/icon_doc_search.png" alt="">  &nbsp <span class="menu-txt">My Timings</span> </a>
